2001-03-04  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* continuations.c (continuation_apply), eval.c (scm_m_lambda,
	scm_m_letstar, scm_m_letrec1, scm_m_let, SCM_APPLY), eval.h
	(SCM_EVALIM2), evalext.c (scm_m_generalized_set_x), gc.c
	(get_bvec, MARK), goops.c (scm_primitive_generic_generic),
	options.c (scm_options), ports.c (scm_remove_from_port_table),
	ramap.c (scm_ramapc), read.c (skip_scsh_block_comment, scm_lreadr,
	scm_lreadparen, scm_lreadrecparen), script.c (script_get_octal,
	script_get_backslash, script_read_arg), unif.c (scm_cvref):  Don't
	call function scm_wta, call scm_misc_error or scm_wrong_type_arg
	instead.

2001-03-04  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>

	* goops.c (scm_sys_pre_expand_closure_x): New procedure.

2001-03-04  Marius Vollmer  <mvo@zagadka.ping.de>

	* eval.c (scm_s_duplicate_bindings): New error message.
	(scm_m_letrec1, scm_m_letstar): Check for duplicate bindings.

2001-03-03  Marius Vollmer  <mvo@zagadka.ping.de>

	* eval.h (SCM_EVALIM2): New macro.  Use it when a
	immediate, literal constant should be evaluated.
	* eval.c (scm_s_duplicate_formals): New error message string.
	(scm_c_improper_memq): New function.
	(scm_m_lambda): Check for duplicate arguments.
	(scm_ceval, scm_deval): When executing a body: only cons a new
	toplevel environment frame when it is different from the
	existing one; use EVALCAR instead of SIDEVAL so that we can properly
	check for empty combinations; use SCM_EVALIM2 for the same reason
	in the non-toplevel loop.
	(nontoplevel_cdrxnoap, nontoplevel_cdrxbegin, nontoplevel_begin):
	New labels with the meaning of their non-"nontoplevel" partners,
	but they are used when it is known that the body is not evaluated at
	top-level.
	(scm_apply, scm_dapply): use SCM_EVALIM2 to get proper error
	reporting for empty combinations.

2001-03-02  Keisuke Nishida  <kxn30@po.cwru.edu>

	* Remove dump facilities.
	* dump.c, dump.h: Removed.
	* Makefile.am: Remove dump.c, dump.h, dump.x, dump.doc.